Fixed recommendations address
